Correction on alignment

--- a/Source/Styles.css
+++ b/Source/Styles.css
@@ -52,6 +52,6 @@ li {
   margin-left: 360px;
 }
 
-.ddisplay-align {
+.display-align {
   margin-right: 100px;
 }
